<resources>
    <string name="app_name">EveryWhereTravel</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="useragreement">登录或注册同意伴米旅行用户协议</string>
    <string name="oauth_cancel">授权取消了</string>
    <string name="oauth_error">授权失败</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="wait_please">请稍后...</string>
    <string name="get_verify_fail">获取验证码失败</string>
    <string name="verify_code">验证码：</string>
    <string name="my_wallet">我的钱包</string>
    <string name="unit">元</string>
    <string name="win_prize"><![CDATA[赢取奖金>>]]></string>
    <string name="coupon">我的卡券</string>
    <string name="already_bought">已购行程</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_interest">我的关注</string>
    <string name="contact_service">联系客服</string>
    <string name="feedback">意见反馈</string>
    <string name="version_checking">版本检测</string>
    <string name="compile">编辑</string>
    <string name="signature">这个人很懒，啥也没写...</string>
    <string name="personal_details">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="user_nickname">用户昵称</string>
    <string name="gender">性别</string>
    <string name="personalized_signature">个性签名</string>
    <string name="change_password">修改密码</string>
    <string name="bind_phone">绑定手机</string>
    <string name="log_out">退出登录</string>
    <string name="sendcode">发送验证码</string>
    <string name="tourist">游客</string>
    <string name="count_down">重新发送</string>
    <string name="complete">完成</string>
    <string name="changeInfoCount">27/27</string>
    <string name="change_nickname">修改昵称</string>
    <string name="experience">立即体验</string>
    <string name="introduction_text1">严选当地人的私藏线路</string>
    <string name="introduction_text2">智能语音实时导航</string>
    <string name="introduction_text3">智能地图为你指路</string>
    <string name="sectet">保密</string>
    <string name="goddess">女</string>
    <string name="man">男</string>
    <string name="view_all_reviews">查看全部评价</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="start_line">开始线路</string>
    <string name="preview_the_line">预览线路</string>
    <string name="code_error">验证码错误</string>
    <string name="withm_details">伴米详情</string>
    <string name="followed">已关注</string>
    <string name="follow">未关注</string>
    <string name="dynamic_state">动态</string>
    <string name="circuit">线路</string>
    <string name="all_reviews">全部评价</string>
    <string name="please_login_weibo">请用微博登录</string>
    <string name="home">首页</string>
    <string name="withm">伴米</string>
    <string name="travel_issues">旅行专题</string>
    <string name="all_state">所有状态</string>

</resources>
