<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.personaldetails.ChangeInfoActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42"
        android:background="@color/c_ffffff"
        >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_21"
            android:background="@mipmap/back_white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal_details"
            android:textColor="@color/c_373737"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_fa6a13"
            android:text="@string/complete"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp_10"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_change_info">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_14"
            android:hint="请输入内容"
            android:maxLength="27"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_999999"/>

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeInfoCount"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_999999"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_12"/>

    </RelativeLayout>

</LinearLayout>