<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailsPageActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_999999"
                android:layout_marginLeft="@dimen/dp_13"
                android:layout_marginTop="@dimen/dp_13"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_marginLeft="@dimen/dp_13"
                android:textSize="@dimen/sp_26"
                android:textColor="@color/c_373737"/>

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="@dimen/dp_13"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/c_636363"/>

            <ImageView
                android:id="@+id/cardURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro"
                android:layout_marginTop="@dimen/dp_10"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/photo"
                android:layout_width="@dimen/dp_52"
                android:layout_height="@dimen/dp_52"
                android:layout_below="@id/cardURL"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/c_373737"
                android:layout_below="@id/cardURL"
                android:layout_toRightOf="@id/photo"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_27"/>

            <TextView
                android:id="@+id/occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_toRightOf="@id/photo"
                android:layout_marginLeft="@dimen/dp_20"
                android:textSize="@dimen/sp_11"
                android:textColor="@color/c_636363"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardURL"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_41"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/c_999999"/>

            <TextView
                android:id="@+id/introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_636363"
                android:lineSpacingExtra="@dimen/dp_5"/>

            <ImageView
                android:id="@+id/userPhoto1"
                android:layout_width="@dimen/dp_38"
                android:layout_height="@dimen/dp_38"
                android:layout_below="@id/introduction"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_45"/>

            <TextView
                android:id="@+id/userName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/introduction"
                android:layout_toRightOf="@id/userPhoto1"
                android:layout_marginTop="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_373737"/>

            <TextView
                android:id="@+id/createdAt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/c_999999"
                android:layout_toRightOf="@id/userPhoto1"
                android:layout_below="@id/userName1"
                android:layout_marginLeft="@dimen/dp_10"/>

            <TextView
                android:id="@+id/content1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_636363"
                android:layout_below="@id/createdAt1"
                android:layout_marginLeft="@dimen/dp_67"
                android:layout_marginTop="@dimen/dp_13"
                android:layout_marginRight="@dimen/dp_20"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content1"
                android:layout_marginLeft="@dimen/dp_67"
                android:layout_marginTop="@dimen/dp_10">

            </android.support.v7.widget.RecyclerView>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@id/recyclerview1"
                android:layout_marginLeft="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_11"
                android:background="@color/c_dcdcdc"/>

            <ImageView
                android:id="@+id/userPhoto2"
                android:layout_width="@dimen/dp_38"
                android:layout_height="@dimen/dp_38"
                android:layout_below="@id/view1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"/>

            <TextView
                android:id="@+id/userName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:layout_toRightOf="@id/userPhoto2"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_373737"/>

            <TextView
                android:id="@+id/createdAt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/c_999999"
                android:layout_toRightOf="@id/userPhoto2"
                android:layout_below="@id/userName2"
                android:layout_marginLeft="@dimen/dp_10"/>

            <TextView
                android:id="@+id/content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_636363"
                android:layout_below="@id/createdAt2"
                android:layout_marginLeft="@dimen/dp_67"
                android:layout_marginTop="@dimen/dp_13"
                android:layout_marginRight="@dimen/dp_20"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content2"
                android:layout_marginLeft="@dimen/dp_67"
                android:layout_marginTop="@dimen/dp_10">

            </android.support.v7.widget.RecyclerView>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@id/recyclerview2"
                android:layout_marginLeft="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_11"
                android:background="@color/c_dcdcdc"/>

            <ImageView
                android:id="@+id/userPhoto3"
                android:layout_width="@dimen/dp_38"
                android:layout_height="@dimen/dp_38"
                android:layout_below="@id/view2"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"/>

            <TextView
                android:id="@+id/userName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view2"
                android:layout_toRightOf="@id/userPhoto3"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_373737"/>

            <TextView
                android:id="@+id/createdAt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/c_999999"
                android:layout_toRightOf="@id/userPhoto3"
                android:layout_below="@id/userName3"
                android:layout_marginLeft="@dimen/dp_10"/>

            <TextView
                android:id="@+id/content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_636363"
                android:layout_below="@id/createdAt3"
                android:layout_marginLeft="@dimen/dp_67"
                android:layout_marginTop="@dimen/dp_13"
                android:layout_marginRight="@dimen/dp_20"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content3"
                android:layout_marginLeft="@dimen/dp_67"
                android:layout_marginTop="@dimen/dp_10">

            </android.support.v7.widget.RecyclerView>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@id/recyclerview3"
                android:layout_marginLeft="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_11"
                android:background="@color/c_dcdcdc"/>

            <TextView
                android:id="@+id/view_all_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_reviews"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_999999"
                android:layout_below="@id/view3"
                android:layout_marginTop="@dimen/dp_10"/>

            <Button
                android:id="@+id/share"
                android:layout_width="@dimen/dp_87"
                android:layout_height="@dimen/dp_28"
                android:layout_below="@id/view_all_reviews"
                android:layout_marginTop="@dimen/dp_33"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_68"
                android:background="@drawable/shape_share"
                android:drawableLeft="@mipmap/share_button"
                android:text="@string/share"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_5"
                />

            <Button
                android:id="@+id/collect"
                android:layout_width="@dimen/dp_87"
                android:layout_height="@dimen/dp_28"
                android:layout_below="@id/view_all_reviews"
                android:layout_toRightOf="@id/share"
                android:layout_marginTop="@dimen/dp_33"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_50"
                android:background="@drawable/shape_share"
                android:drawableLeft="@mipmap/collect_default"
                android:text="@string/collect"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_5" />

            <Button
                android:id="@+id/collected"
                android:layout_width="@dimen/dp_87"
                android:layout_height="@dimen/dp_28"
                android:layout_below="@id/view_all_reviews"
                android:layout_toRightOf="@id/share"
                android:layout_marginTop="@dimen/dp_33"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_50"
                android:background="@drawable/shape_share"
                android:drawableLeft="@mipmap/collect_highlight"
                android:text="@string/collected"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_5" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/c_ffffff"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/start_line"
            android:layout_width="@dimen/dp_220"
            android:layout_height="@dimen/dp_38"
            android:background="@drawable/details_color_ff9d53_fa6a13"
            android:text="@string/start_line"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/c_ffffff"/>

        <Button
            android:id="@+id/preview_the_line"
            android:layout_width="@dimen/dp_112"
            android:layout_height="@dimen/dp_38"
            android:text="@string/preview_the_line"
            android:textColor="@color/c_fa6a13"
            android:textSize="@dimen/sp_15"
            android:background="@drawable/details_color_stroke"
            android:visibility="gone"/>

        <Button
            android:id="@+id/price"
            android:layout_width="@dimen/dp_112"
            android:layout_height="@dimen/dp_38"
            android:text=""
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/sp_15"
            android:background="@drawable/details_color_ff9d53_fa6a13"
            android:layout_marginLeft="@dimen/dp_50"
            android:visibility="gone"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/close"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:background="@mipmap/close"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"/>

</RelativeLayout>